@@ -120,3 +120,4 @@
 21-Sep-2021  - V1.29 Add retry decorator for remote mmCIF deserialization method
 27-Sep-2021  - V1.30 For Macos make the example multiprocessing test method a function (new serialization issues)
 28-Sep-2021  - V1.31 Add diagnostic logging for FileUtil.exists/size methods for null locators
+17-Oct-2021  - V1.32 Add local replace() method in FileUtil()
